crates/solaris-providers/src/snapshots/solaris_providers__openai__tests__openai_basic.snap
---
source: crates/solaris-providers/src/composed_test.rs
assertion_line: 174
expression: body
---
{
  "max_tokens": 8192,
  "messages": [
    {
      "content": "You are a test assistant.",
      "role": "system"
    },
    {
      "content": "Hello",
      "role": "user"
    }
  ],
  "model": "test-model",
  "stream": true,
  "stream_options": {
    "include_usage": true
  }
}
