crates/solaris-providers/src/snapshots/solaris_providers__openai__tests__openai_custom_max_tokens_field.snap
---
source: crates/solaris-providers/src/composed_test.rs
assertion_line: 300
expression: "provider.build_request_body(&request).expect(\"request body projection should succeed\")"
---
{
  "max_completion_tokens": 8192,
  "messages": [
    {
      "content": "You are a test assistant.",
      "role": "system"
    },
    {
      "content": "hi",
      "role": "user"
    }
  ],
  "model": "test-model",
  "stream": true,
  "stream_options": {
    "include_usage": true
  }
}
