crates/solaris-providers/src/snapshots/solaris_providers__openai__tests__openai_field_controls_disabled.snap
---
source: crates/solaris-providers/src/composed_test.rs
assertion_line: 324
expression: "provider.build_request_body(&request).expect(\"request body projection should succeed\")"
---
{
  "max_tokens": 8192,
  "messages": [
    {
      "content": "You are a test assistant.",
      "role": "system"
    },
    {
      "content": "hi",
      "role": "user"
    }
  ],
  "model": "test-model",
  "stream": true
}
