crates/solaris-providers/src/snapshots/solaris_providers__openai__tests__openai_with_reasoning_effort.snap
---
source: crates/solaris-providers/src/composed_test.rs
assertion_line: 280
expression: "provider.build_request_body(&request).expect(\"request body projection should succeed\")"
---
{
  "max_tokens": 8192,
  "messages": [
    {
      "content": "You are a test assistant.",
      "role": "system"
    },
    {
      "content": "hi",
      "role": "user"
    }
  ],
  "model": "test-model",
  "reasoning_effort": "medium",
  "stream": true,
  "stream_options": {
    "include_usage": true
  }
}
